# sanc_thingy53

./: CMakeLists.txt  Kconfig.sysbuild  LICENSE  README.md  app.overlay  app.overlay.bk  flash.sh  flash_full.sh  flash_sim_enable.overlay  flash_usb.sh  flash_usb_full.sh  prj.conf  sanc_thingy53.code-workspace  sysbuild.conf  upload.sh
.agents/: AGENTS.md  PINMAP.md  TODO.md  data_stream_format.md  markdownlint.json
boards/sanc/sanc_thingy53/: Kconfig.defconfig  Kconfig.sanc_thingy53  Kconfig.sysbuild  board.cmake  board.yml  sanc_thingy53-pinctrl.dtsi  sanc_thingy53_cpuapp-partitioning.dtsi  sanc_thingy53_nrf5340_cpuapp.dts  sanc_thingy53_nrf5340_cpuapp.yaml  sanc_thingy53_nrf5340_cpuapp_defconfig  sanc_thingy53_nrf5340_cpuapp_ns.dts  sanc_thingy53_nrf5340_cpuapp_ns.yaml  sanc_thingy53_nrf5340_cpuapp_ns_defconfig  sanc_thingy53_nrf5340_cpunet.dts  sanc_thingy53_nrf5340_cpunet.yaml  sanc_thingy53_nrf5340_cpunet_defconfig
src/: main.c
src/bsp/: bsp.c  bsp.h  bsp_adc.c  bsp_buzzer.c  bsp_gpio.c  bsp_led.c  bsp_led_pwm.c  bsp_msg_parser.c  bsp_msg_parser.h  bsp_sensor.h  bsp_sensor_adxl362.c  bsp_sensor_bh1749.c  bsp_sensor_bme688.c  bsp_sensor_bmi270.c  bsp_sensor_bmm150.c  bsp_state_machine.c  bsp_statistics.c  bsp_utils.c
src/cbor/: README.txt  cbor_msg.cddl  cbor_msg_encode.c  cbor_msg_encode.h  cbor_msg_encode_types.h
src/shell/: shell_adc.c  shell_buzzer.c  shell_gpio.c  shell_led.c  shell_led_pwm.c  shell_sanc.h  shell_sensors.c  shell_system.c
sysbuild/: CMakeLists.txt
sysbuild/mcuboot/: prj.conf
